frontend/src/index.css
* {
  margin: 0px;
  padding: 0px;
}

body {
  color: black;
}

a:hover {
  opacity: 1;
  filter: drop-shadow(0.1rem 0.1rem 0.2rem rgb(211, 211, 211));
}

.image-padding {
  margin-top: 4vh;
}

.treeview-padding {
  padding-top: 10px;
}

.title {
  font-size: large;
  position: fixed;
  left: 50%;
  top: 3.5%;
  transform: translate(-50%, -50%);
}

.slick-container-light {
  text-align: center;
  text-transform: uppercase;
  font-size: 0.75rem;
  font-weight: 400;
  letter-spacing: 1.5px;
  padding: 40px;
  border: 3px dotted;
  color: #000;
  font-family: 'Cardo';
}

.slick-container-dark {
  text-align: center;
  text-transform: uppercase;
  font-size: 0.75rem;
  font-weight: 400;
  letter-spacing: 1.5px;
  padding: 40px;
  border: 3px dotted;
  color: rgb(255, 255, 255);
  font-family: 'Cardo';
}

.slick-pad {
  margin-top: 25vh;
  padding-right: 9%;
  padding-left: 5%;
}

.brand-season-header-light {
  align-content: center;
  width: max-content;
  justify-content: center;
  text-transform: uppercase;
  font-size: 0.75rem;
  font-weight: 500;
  letter-spacing: 1.5px;
  padding: 2px 17px;
  border: 1px solid;
  color: #000;
  font-family: 'Cardo';
  text-align: center;
}

.brand-season-header-dark {
  align-content: center;
  width: max-content;
  justify-content: center;
  text-transform: uppercase;
  font-size: 0.75rem;
  font-weight: 500;
  letter-spacing: 1.5px;
  padding: 2px 17px;
  border: 1px solid;
  color: rgb(255, 255, 255);
  font-family: 'Cardo';
  text-align: center;
}

.section-container {
  padding-top: 9vh;
  margin-left: 5%;
}

img {
  margin-top: 25px;
  font-size: 21px;
  text-align: center;

  -webkit-animation: fadein 1.5s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 1.5s; /* Firefox < 16 */
  -ms-animation: fadein 1.5s; /* Internet Explorer */
  -o-animation: fadein 1.5s; /* Opera < 12.1 */
  animation: fadein 1.5s;
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

img:hover {
  opacity: 1;
}

.loading-msg {
  text-align: center;
}

.gallery-modal {
  z-index: 999;
}

.switch-container {
  position: absolute;
  right: 12px;
  margin-top: -4vh;
  margin-right: 2%;
}

.switch-container-lookbook {
  position: absolute;
  right: 12px;
  margin-top: -2.8vh;
  margin-right: 2%;
}

.switch-icons {
  margin-top: -20px;
  margin-left: 40px;
}

.slick-slide {
  visibility: hidden;
}

.slick-slide.slick-active {
  visibility: visible;
}

.season-containers {
  margin-right: 5%;
}

.season-pad {
  margin-top: 10vh;
}

span {
  font-family: 'Cardo';
  font-size: 0.8em;
  font-variant: small-caps;
}

.user-menu {
  margin-left: auto;
  margin-top: 2%;
}

.user-menu ul li {
  display: inline-block;
  padding-left: 5px;
}

.form-container {
  margin-top: 10vh;
  margin-right: 5%;
  margin-left: 5%;
}

.button-container {
  text-align: center;
  padding-top: 5px;
}

